# clovers-utils

./: .gitignore  README.md  pyproject.toml  setup.py
.github/workflows/: cibuildwheel.yml
clovers_utils/: __init__.py  account.py  linecard.py  tools.py  utils.py
clovers_utils/linecard/: __init__.py  core.py  linecard_parsing.cp313-win_amd64.pyd  linecard_parsing.cpp  linecard_parsing.pyd  linecard_parsing.pyi
linecard_parsing/: linecard_parsing.cpp  linecard_parsing.pyd  setup.py
src/: linecard_parsing.cpp
test/: example.txt  main.py  parse_str.py  test.py
