[project]
name = "clovers-utils"
version = "0.2.4"
description = ""
authors = [{ name = "KarisAya", email = "1048827424@qq.com" }]
readme = "README.md"
requires-python = ">=3.12"

[project.optional-dependencies]
linecard = ["pillow (>=11.1.0,<12.0.0)", "fonttools (>=4.55.6,<5.0.0)"]
tools = ["numpy (>=2.2.2,<3.0.0)", "httpx (>=0.28.1,<0.29.0)"]
all = [
    "pillow (>=11.1.0,<12.0.0)",
    "fonttools (>=4.55.6,<5.0.0)",
    "numpy (>=2.2.2,<3.0.0)",
    "httpx (>=0.28.1,<0.29.0)",
]

# [build-system]
# requires = ["poetry-core>=2.0.0,<3.0.0"]
# build-backend = "poetry.core.masonry.api"

[build-system]
requires = ["setuptools"]
build-backend = "setuptools.build_meta"

[tool.poetry.group.build.dependencies]
setuptools = "^75.8.0"
cibuildwheel = "^2.22.0"


[tool.setuptools]
packages = ["clovers_utils", "clovers_utils.linecard"]

# python setup.py build_ext --inplace
# cibuildwheel --platform linux --output-dir ./dist
# cibuildwheel --platform windows --output-dir ./dist
