[project]
name = "clovers-utils"
version = "0.3.0"
description = ""
authors = [{ name = "KarisAya", email = "karisaya@foxmail.com" }]
readme = "README.md"
requires-python = ">=3.12"
dependencies = ["numpy (>=2.2.2,<3.0.0)", "httpx (>=0.28.1,<0.29.0)"]


[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
